Fixed content-section on small screens

--- a/style/style.css
+++ b/style/style.css
@@ -267,6 +267,7 @@ h3 {
   }
   .content-section {
     margin-bottom: 50px;
+    text-align: center;
   }
   .about-description {
     padding-left: 10px;
